# On-Xp-replicable-python-hello-world-task

./: .pdm-python  README.md  dump.rdb  pyproject.toml
